--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "authors": [
     "Michael Mayer <michael@schnittstabil.de>"
@@ -29,8 +29,6 @@
   "license": "MIT",
   "ignore": [
     "bower_components",
-    "build.txt",
-    "Gruntfile.js",
-    "package.json"
+    "build.txt"
   ]
 }
