--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "authors": [
     "Michael Mayer <michael@schnittstabil.de>"
@@ -29,6 +29,8 @@
   "license": "MIT",
   "ignore": [
     "bower_components",
-    "build.txt"
+    "build.txt",
+    "browsers.json",
+    ".travis.yml"
   ]
 }
