--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "authors": [
     "Michael Mayer <michael@schnittstabil.de>"
@@ -29,8 +29,14 @@
   "license": "MIT",
   "ignore": [
     "bower_components",
-    "build.txt",
     "browsers.json",
+    "build.txt",
+    "component.json",
+    ".gitignore",
+    "Gruntfile.js",
+    "node_modules",
+    "package.json",
+    "test",
     ".travis.yml"
   ]
 }
