--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Collect CharCodes and convert them to string.",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "keywords": [
@@ -28,7 +28,7 @@
     "url": "https://github.com/schnittstabil/char-buffer/issues"
   },
   "preferGlobal": false,
-  "main": "./char-buffer.js",
+  "main": "./index.js",
   "scripts": {
     "test": "grunt test",
     "postinstall" : "cd test && ../node_modules/.bin/bower install"
@@ -37,12 +37,18 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
+    
   },
   "devDependencies": {
+    "expect.js": "^0.3.1",
+    "mocha": "^1.18.2",
     "bower": "^1.3.2",
     "grunt": "^0.4.4",
-    "grunt-saucelabs": "^5.1.3",
     "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha-istanbul": "^1.2.0",
+    "grunt-mocha-test": "^0.10.2",
+    "grunt-saucelabs": "^5.1.3",
+    "istanbul": "^0.2.7"
   }
 }
