--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "license": "MIT",
   "description": "Collect CharCodes and convert them to string.",
   "homepage": "https://github.com/schnittstabil/char-buffer",
@@ -31,7 +31,7 @@
   "private": true,
   "main": "./src/main/js/char-buffer/index.js",
   "scripts": {
-    "postinstall": "cd ./node_modules && ln -s ../src/main/js/char-buffer",
+    "postinstall": "ln -s -t node_modules ../src/main/js/char-buffer/",
     "test": "NODE_PATH=./src/main/js istanbul cover --dir ./target/doc/coverage _mocha -- -R spec --recursive src/test/js/ --require src/test/inject && cat ./target/doc/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "clean": "rm -r ./target/doc/coverage/"
   },
