--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.5.0",
+  "version": "0.5.2",
   "description": "Collect CharCodes and convert them to string.",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "keywords": [
@@ -31,7 +31,7 @@
   "main": "./index.js",
   "scripts": {
     "test": "grunt test",
-    "postinstall" : "cd test && ../node_modules/.bin/bower install"
+    "postinstall" : "cd node_modules && ln -s .. char-buffer && cd ../test && ../node_modules/.bin/bower install"
   },
   "engines": {
     "node": ">= 0.8.0"
