--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     
   },
   "devDependencies": {
+    "coveralls": "^2.10.0",
     "expect.js": "^0.3.1",
     "mocha": "^1.18.2",
     "bower": "^1.3.2",
