--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
+node_js:
+- "0.10"
+language: node_js
+before_script:
+- npm install -g grunt-cli
+- npm install -g bower
+- npm install -g component@1.0.0-rc5
+- component install --dev
+- component build --dev
+- cd test && bower install && cd ..
 env:
   global:
   - secure: sWCmGm3iEto/u3IQzZ8r0nXsP0FwFaXHd2UMOXiJTRuTpRGCnV6u7Lppd55vPm50ZZRBRlYQUvvIWikemuDbl2oDG+sC/jcr+8eNcvAd25t4QmDNPwe0fQZQpdY2OJPXbq+7ZWvA4Avmo9mSw4+VJ/qlaNDn+mo/SRlOlg0lKwc=
   - secure: aUMUbKjEMWesxTj1N45+poGRoV6MKveoMs/wff/EXyXWPCGs+BGCHcn593wb7ztTvIaIu/SHCi+ZD6+yIHtVZdWyQULBw6CK36mZyzmwNJilUZ5Oho8tB7OfoCsYdf5urj9YOeUqCeFWFJt8KkQ+sXx8zSp0nvyUcwB3x47djnU=
-language: node_js
-node_js:
-- "0.10"
-before_script:
-- "npm install -g grunt-cli"
+  - secure: ZJAeTSZE9nGcHaWbPgR4V/NUnBJQQsag3n88VaKY7Zm5RM1ylp3iBPjBQ/SJLlFb4tVZ/bn0iiVCLCanilxZdR0o1Ai7tCOixhLjqqye+jjsh8tpPMYrIxpt5aezX3pm+6e9g0W5oDDsIHrIiYPfGx2Q4tttJqLJSe/3GR+6Vbs=
+  - secure: Baji/0sf98ZBRJJTLZf689N8RrntORIusANQsZyOFjvwv8bu4vEOFBhfvbO3EeHvX7Y1PMBKw/k9kJMD7MVTOpRnRGWOHh8U8TxaTl5TCzvhXgjSMjst2ekMChm2Dm8a6Hn8JEWcy340naJOBb1O7eImX8fPGteNz55k4nqF0lo=
