--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "url": "https://github.com/schnittstabil/char-buffer/issues"
   },
   "preferGlobal": false,
-  "main": "./index.js",
+  "main": "index.js",
   "scripts": {
-    "pretest": "cd node_modules && ln -s .. char-buffer && cd ../test && ../node_modules/.bin/bower install",
     "test": "grunt test"
   },
   "engines": {
@@ -40,15 +39,8 @@
     
   },
   "devDependencies": {
-    "coveralls": "^2.10.0",
-    "expect.js": "^0.3.1",
-    "mocha": "^1.18.2",
-    "bower": "^1.3.2",
     "grunt": "^0.4.4",
     "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-istanbul": "^1.2.0",
-    "grunt-saucelabs": "^5.1.3",
-    "istanbul": "^0.2.7"
+    "grunt-saucelabs": "^8.0.2"
   }
 }
