--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.5.7",
+  "version": "0.5.8",
   "description": "Collect CharCodes and convert them to string.",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "keywords": [
@@ -28,7 +28,7 @@
     "url": "https://github.com/schnittstabil/char-buffer/issues"
   },
   "preferGlobal": false,
-  "main": "index.js",
+  "main": "char-buffer.js",
   "scripts": {
     "test": "grunt test"
   },
