--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.5.8",
+  "version": "0.5.9",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "authors": [
     "Michael Mayer <michael@schnittstabil.de>"
@@ -39,6 +39,14 @@
     "Gruntfile.js",
     "node_modules",
     "package.json",
-    "test"
-  ]
+    "test",
+    "*.html"
+  ],
+  "devDependencies": {
+    "expect": "schnittstabil/expect#0.3.1+schnittstabil",
+    "mocha": "^1.20.1",
+    "mocha-screencast-reporter": "^0.1.3",
+    "requirejs": "^2.1.14",
+    "system.js": "~0.6.6"
+  }
 }
