--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.5.10",
+  "version": "0.6.0",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "authors": [
     "Michael Mayer <michael@schnittstabil.de>"
@@ -31,6 +31,7 @@
   "ignore": [
     "bower_components",
     "browsers.json",
+    "legacy-browsers.json",
     "build/",
     "build.txt",
     "component.json",
@@ -45,8 +46,8 @@
   "devDependencies": {
     "expect": "schnittstabil/expect#0.3.1+schnittstabil",
     "mocha": "^1.20.1",
-    "mocha-screencast-reporter": "^0.1.3",
+    "mocha-screencast-reporter": "^0.1.4",
     "requirejs": "^2.1.14",
-    "system.js": "~0.6.6"
+    "system.js": "^0.6.7"
   }
 }
