--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.5.10",
+  "version": "0.6.0",
   "description": "Collect CharCodes and convert them to string.",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "keywords": [
@@ -40,7 +40,8 @@
   },
   "devDependencies": {
     "grunt": "^0.4.4",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-saucelabs": "^8.0.2"
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-saucelabs": "^8.1.1"
   }
 }
