--- a/bower.json
+++ b/bower.json
@@ -44,10 +44,10 @@
     "*.html"
   ],
   "devDependencies": {
-    "expect": "schnittstabil/expect#0.3.1+schnittstabil",
+    "xpect": "^0.3.1",
     "mocha": "^1.20.1",
     "mocha-screencast-reporter": "^0.1.4",
     "requirejs": "^2.1.14",
-    "system.js": "^0.6.7"
+    "system.js": "^0.8.2"
   }
 }
