--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "authors": [
     "Michael Mayer <michael@schnittstabil.de>"
@@ -44,8 +44,8 @@
     "*.html"
   ],
   "devDependencies": {
-    "xpect": "^0.3.1",
-    "mocha": "^1.20.1",
+    "xpect": ">=0.3.2 <0.4.0",
+    "mocha": ">=1.21.4 <2.0.0",
     "mocha-screencast-reporter": "^0.1.4",
     "requirejs": "^2.1.14",
     "system.js": "^0.8.2"
