--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Collect CharCodes and convert them to string.",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "keywords": [
@@ -33,15 +33,15 @@
     "test": "grunt test"
   },
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">= 0.6.0"
   },
   "dependencies": {
     
   },
   "devDependencies": {
-    "grunt": "^0.4.4",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-saucelabs": "^8.1.1"
+    "grunt": ">=0.4.5 <0.5.0",
+    "grunt-contrib-connect": ">=0.8.0 <1.0.0",
+    "grunt-contrib-watch": ">=0.6.1 <1.0.0",
+    "grunt-saucelabs": ">=8.1.1 <9.0.0"
   }
 }
