--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 sudo: false
-node_js:
-  - 'stable'
 language: node_js
-before_script:
-- npm install -g grunt-cli
-- npm install -g bower
-- bower install
-env:
-  global:
-  - secure: sWCmGm3iEto/u3IQzZ8r0nXsP0FwFaXHd2UMOXiJTRuTpRGCnV6u7Lppd55vPm50ZZRBRlYQUvvIWikemuDbl2oDG+sC/jcr+8eNcvAd25t4QmDNPwe0fQZQpdY2OJPXbq+7ZWvA4Avmo9mSw4+VJ/qlaNDn+mo/SRlOlg0lKwc=
-  - secure: aUMUbKjEMWesxTj1N45+poGRoV6MKveoMs/wff/EXyXWPCGs+BGCHcn593wb7ztTvIaIu/SHCi+ZD6+yIHtVZdWyQULBw6CK36mZyzmwNJilUZ5Oho8tB7OfoCsYdf5urj9YOeUqCeFWFJt8KkQ+sXx8zSp0nvyUcwB3x47djnU=
-  - secure: ZJAeTSZE9nGcHaWbPgR4V/NUnBJQQsag3n88VaKY7Zm5RM1ylp3iBPjBQ/SJLlFb4tVZ/bn0iiVCLCanilxZdR0o1Ai7tCOixhLjqqye+jjsh8tpPMYrIxpt5aezX3pm+6e9g0W5oDDsIHrIiYPfGx2Q4tttJqLJSe/3GR+6Vbs=
-  - secure: Baji/0sf98ZBRJJTLZf689N8RrntORIusANQsZyOFjvwv8bu4vEOFBhfvbO3EeHvX7Y1PMBKw/k9kJMD7MVTOpRnRGWOHh8U8TxaTl5TCzvhXgjSMjst2ekMChm2Dm8a6Hn8JEWcy340naJOBb1O7eImX8fPGteNz55k4nqF0lo=
-
-script: "grunt test"
+matrix:
+  include:
+    - node_js: "0.10"
+    - node_js: "0.12"
+    - node_js: "4"
+    - node_js: "5"
+    - node_js: "6"
+      env: COVER=yes
+before_install:
+  - 'npm install -g npm@latest'
+script:
+  - 'if [ -n "$COVER" ]; then npm run test-cover; else npm test; fi'
+after_success:
+    - 'if [ -n "$COVER" ]; then ./node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls; fi'
