--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "char-buffer",
-  "version": "0.8.0",
+  "version": "1.0.1",
   "description": "Collect CharCodes and convert them to string.",
   "homepage": "https://github.com/schnittstabil/char-buffer",
   "keywords": [
@@ -28,20 +28,76 @@
     "url": "https://github.com/schnittstabil/char-buffer/issues"
   },
   "preferGlobal": false,
-  "main": "char-buffer.js",
+  "main": "node-buffer.js",
+  "files": [
+    "*-buffer.js"
+  ],
   "scripts": {
-    "test": "grunt test"
+    "test": "xo && ava",
+    "test-cover": "xo && nyc ava",
+    "test-cover-html": "npm run test-cover && nyc report --reporter=html",
+    "test-browser-local": "grunt default",
+    "test-browser-saucelabs": "grunt saucelabs",
+    "docs-clean": "del readme.md gh-pages/api gh-pages/readme.md",
+    "docs-build": "grunt docs && jsduck --builtin-classes --welcome=gh-pages/readme.md --title=char-buffer --output=gh-pages/api *-buffer.js",
+    "docs": "npm run docs-clean && npm run docs-build"
   },
   "engines": {
-    "node": ">= 0.6.0"
+    "node": ">= 0.10"
   },
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "devDependencies": {
-    "grunt": ">=0.4.5 <0.5.0",
-    "grunt-contrib-connect": ">=0.8.0 <1.0.0",
-    "grunt-contrib-watch": ">=0.6.1 <1.0.0",
-    "grunt-saucelabs": ">=8.1.1 <9.0.0"
+    "ava": "^0.15.2",
+    "chalk": "^1.1.3",
+    "coveralls": "^2.11.11",
+    "del-cli": "^0.2.0",
+    "dots": "^0.1.0",
+    "execa": "^0.4.0",
+    "grunt": "^1.0.1",
+    "grunt-compile-handlebars": "^2.0.2",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-saucelabs": "^9.0.0",
+    "handlebars": "^4.0.5",
+    "jspm": "^0.16.39",
+    "nyc": "^7.1.0-candidate3",
+    "xo": "^0.16.0"
+  },
+  "xo": {
+    "ignores": [
+      "**/.nyc_output/**",
+      "**/coverage/**",
+      "**/gh-pages/**",
+      "**/jspm_packages/**",
+      "config.js",
+      "build.js"
+    ],
+    "overrides": [
+      {
+        "files": "test/_mocha.js",
+        "envs": [
+          "mocha",
+          "browser"
+        ],
+        "globals": [
+          "xpect"
+        ]
+      }
+    ]
+  },
+  "jspm": {
+    "main": "typed-array-buffer",
+    "format": "cjs",
+    "directories": {
+      "files": [
+        "./abstract-char-buffer.js",
+        "./string-array-buffer.js",
+        "./string-buffer.js",
+        "./typed-array-buffer.js"
+      ],
+      "lib": "."
+    },
+    "dependencies": {},
+    "devDependencies": {}
   }
 }
