--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,7 @@
-sudo: false
 language: node_js
-matrix:
-  include:
-    - node_js: "0.10"
-    - node_js: "0.12"
-    - node_js: "4"
-    - node_js: "5"
-    - node_js: "6"
-      env: COVER=yes
-before_install:
-  - 'npm install -g npm@latest'
-script:
-  - 'if [ -n "$COVER" ]; then npm run test-cover; else npm test; fi'
+node_js:
+  - '8'
+  - '10'
+  - '12'
 after_success:
-  - 'if [ -n "$COVER" ]; then node_modules/.bin/nyc report --reporter=text-lcov | node_modules/.bin/coveralls; fi'
+  - 'node_modules/.bin/nyc report --reporter=text-lcov | node_modules/.bin/coveralls'
